# PyConcatSrt

./: .gitignore  pyproject.toml
src/: CheckerSrtFormat.py  Controller.py  DialogScript.py  ErrorClass.py  GuiPyConcatSRT.py  ReadFileSrt.py  ReaderFileSrt.py  WriterFileSrt.py  final.srt  run_cli.py  run_gui.py
src/7809/: CD1.srt  CD2.srt
src/srts/: empty.srt  error_times.srt  sample1.srt
tests/: test_Controller.py  test_ReadFileSrt.py  tests.py  tests_Main.py
tests/srts/: not_consecutive.srt
